@@ -277,7 +277,7 @@ es_tx_one_shm_load(es_state *esim, es_transaction *tx)
 static int
 es_tx_one_shm_store(es_state *esim, es_transaction *tx)
 {
-  address_word i, invalidate;
+  PCADDR i, invalidate;
   size_t n = min(tx->remaining, tx->sim_addr.in_region);
   memmove(tx->sim_addr.mem, tx->target, n);
   tx->target += n;
@@ -643,9 +643,13 @@ es_validate_cluster_cfg(const es_cluster_cfg *c)
   FAIL_IF(c->core_mem_region & (c->core_mem_region-1),
 			    "Core memory region size must be power of two");
 
-  FAIL_IF(c->ext_ram_size > ((size_t) (1UL<<32)),
-			    "External RAM size too large");
-  FAIL_IF(c->ext_ram_size + ((size_t) c->ext_ram_base) > ((size_t) (1UL<<32)),
+  /* Only support up to 4GB for now */
+  FAIL_IF((uint64_t) c->ext_ram_size > (1UL<<32UL),
+			    "External RAM size too large. Max is 4GB");
+
+  FAIL_IF((address_word)
+    (c->ext_ram_base + c->ext_ram_size) < (address_word) c->ext_ram_base &&
+    !(c->ext_ram_base && (address_word) (c->ext_ram_base + c->ext_ram_size) == 0),
 			    "External RAM would overflow address space");
 
   FAIL_IF(c->ext_ram_size && (c->ext_ram_size & (c->core_mem_region-1)),
